build(pom): remove checkstyle